--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <string name="dbname_reports">Reports</string>
     <string name="post_updates">Post_updates</string>
     <string name="dbname_ChatList">ChatList</string>
+    <string name="thumbnail">thumbnail</string>
+    <string name="type">type</string>
 
     field_post
 
