Username DB created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,7 @@
     <string name="field_whatsapp">whatsapp</string>
     <string name="db_posts_deleted">deleted_posts</string>
     <string name="explore_update">explore_update</string>
+    <string name="dbname_username">username</string>
 
     field_post
 
