FAN/FOLLOW LIST Optimized Explore Bug Fixes Minor Chnages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,7 +244,7 @@
 
     </string-array>
     <string-array name="domain2">
-        <item>All</item>
+        <item>Overall</item>
         <item>Speaker</item>
         <item>Chef</item>
         <item>Cinematographer</item>
