--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,10 +164,10 @@
     <string name="field_jury_3">j3</string>
     <string name="field_notification_message">not</string>
 
-    <string name="field_promotion_time_start">tiS</string>
-    <string name="field_promotion_time_end">tiE</string>
-    <string name="field_promoter_ID">pID</string>
-    <string name="field_story_ID">stID</string>
+    <string name="field_promotion_time_start">tis</string>
+    <string name="field_promotion_time_end">tie</string>
+    <string name="field_promoter_ID">pid</string>
+    <string name="field_story_ID">stid</string>
     <string name="field_unfollowed_Me">um</string>
     <string name="Privacy_Policy">https://drive.google.com/file/d/1Kat9jq_H9vXxNWXmKfP4N3XerfpfHkw5/view?usp=sharing</string>
     <string name="Terms_and_Condition">https://drive.google.com/file/d/1t8XtHgyhvhWlWPlqoG8MREP56kFuEhPL/view?usp=sharing</string>
