Enhanced LeaderboardActivity Quizz addition Auto Update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <string name="post_updates">pu</string>
     <string name="dbname_Sponsors">sponsors</string>
     <string name="field_intent_link">il</string>
-
+    <string name="last_updated">lu</string>
 
     <string-array name="entryfee2">
         <item>Overall</item>
